Version 1.3 - 2015-01-22
* Add invoice consulation group

Version 1.2 - 2014-07-01
* Changelog file creation