@@ -7,4 +7,5 @@ depends:
     company_cog
     account_invoice
 xml:
+    icons.xml
     invoice.xml
