@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/tree/field[@name='state']" position="replace"/>
+    <xpath expr="/tree/field[@name='type']" position="before">
+        <field name="state" icon="icon"/>
+    </xpath>
+</data>
