@@ -10,7 +10,6 @@ depends:
     bank_cog
     premium_insurance
 xml:
-    icon.xml
     product.xml
     invoice.xml
     contract.xml
