@@ -1,3 +1,5 @@
+* Display invoices in list view in different colors according to state
+
 Version 1.3 - 2015-01-22
 * Add invoice line details
 
