@@ -1,3 +1,5 @@
+* New icons based on state for invoice
+
 Version 1.3 - 2015-01-22
 * Add invoice consulation group
 
